Support edc 7